intrinsic_add_module_library(IntrinsicGeometry)
set(target_name IntrinsicGeometry)

target_sources(${target_name}
        PUBLIC
        FILE_SET CXX_MODULES TYPE CXX_MODULES FILES
        Geometry.cppm
        Geometry.AABB.cppm
        Geometry.OBB.cppm
        Geometry.Sphere.cppm
        Geometry.SphereSampling.cppm
        Geometry.Capsule.cppm
        Geometry.Cylinder.cppm
        Geometry.Ellipsoid.cppm
        Geometry.Pca.cppm
        Geometry.Segment.cppm
        Geometry.Triangle.cppm
        Geometry.Plane.cppm
        Geometry.ConvexHull.cppm
        Geometry.Frustum.cppm
        Geometry.Ray.cppm
        Geometry.ContactManifold.cppm
        Geometry.Containment.cppm
        Geometry.GJK.cppm
        Geometry.EPA.cppm
        Geometry.Handle.cppm
        Geometry.Overlap.cppm
        Geometry.Primitives.cppm
        Geometry.Support.cppm
        Geometry.SDF.cppm
        Geometry.SDFContact.cppm
        Geometry.Validation.cppm
        Geometry.Properties.cppm
        Geometry.Circulators.cppm
        Geometry.MeshUtils.cppm
        Geometry.Octree.cppm
        Geometry.KDTree.cppm
        Geometry.BVH.cppm
        Geometry.Raycast.cppm
        Geometry.HalfedgeMesh.cppm
        Geometry.HtexPatch.cppm
        Geometry.MeshBuilder.cppm
        Geometry.MeshOperator.cppm
        Geometry.Graph.cppm
        Geometry.DEC.cppm
        Geometry.Curvature.cppm
        Geometry.Smoothing.cppm
        Geometry.Simplification.cppm
        Geometry.Subdivision.cppm
        Geometry.LinearSolver.cppm
        Geometry.Remeshing.cppm
        Geometry.Geodesic.cppm
        Geometry.CatmullClark.cppm
        Geometry.NormalEstimation.cppm
        Geometry.MeshRepair.cppm
        Geometry.MarchingCubes.cppm
        Geometry.MeshBoundary.cppm
        Geometry.SurfaceReconstruction.cppm
        Geometry.Parameterization.cppm
        Geometry.MeshQuality.cppm
        Geometry.MeshAnalysis.cppm
        Geometry.AdaptiveRemeshing.cppm
        Geometry.ConvexHullBuilder.cppm
        Geometry.KMeans.cppm
        Geometry.PointCloud.cppm
        Geometry.Boolean.cppm
        Geometry.Quadric.cppm
        Geometry.Queries.cppm
        Geometry.ShortestPath.cppm
        PRIVATE
        Geometry.MeshUtils.cpp
        Geometry.Raycast.cpp
        Geometry.EPA.cpp
        Geometry.HalfedgeMesh.cpp
        Geometry.HtexPatch.cpp
        Geometry.MeshBuilder.cpp
        Geometry.Properties.cpp
        Geometry.Graph.cpp
        Geometry.Octree.cpp
        Geometry.KDTree.cpp
        Geometry.BVH.cpp
        Geometry.DEC.cpp
        Geometry.Curvature.cpp
        Geometry.Smoothing.cpp
        Geometry.SphereSampling.cpp
        Geometry.Simplification.cpp
        Geometry.Subdivision.cpp
        Geometry.Remeshing.cpp
        Geometry.Geodesic.cpp
        Geometry.CatmullClark.cpp
        Geometry.NormalEstimation.cpp
        Geometry.MeshRepair.cpp
        Geometry.MarchingCubes.cpp
        Geometry.MeshBoundary.cpp
        Geometry.SurfaceReconstruction.cpp
        Geometry.Parameterization.cpp
        Geometry.MeshQuality.cpp
        Geometry.MeshAnalysis.cpp
        Geometry.AdaptiveRemeshing.cpp
        Geometry.ConvexHullBuilder.cpp
        Geometry.KMeans.cpp
        Geometry.PointCloud.cpp
        Geometry.Sphere.cpp
        Geometry.Boolean.cpp
        Geometry.ShortestPath.cpp
)

target_include_directories(${target_name} PUBLIC .)

target_link_libraries(${target_name}
        PUBLIC
        IntrinsicCore
        glm::glm
)
