intrinsic_add_module_library(IntrinsicGraphics)
set(target_name IntrinsicGraphics)

target_sources(${target_name}
        PUBLIC
        FILE_SET CXX_MODULES TYPE CXX_MODULES FILES
        Graphics.cppm
        Graphics.Camera.cppm
        Graphics.Geometry.cppm
        Graphics.Material.cppm
        Graphics.MaterialSystem.cppm
        Graphics.Model.cppm
        Graphics.RenderSystem.cppm
        Graphics.RenderGraph.cppm
        Graphics.Components.cppm
        Graphics.ModelLoader.cppm
        Graphics.TextureLoader.cppm
        Graphics.AssetErrors.cppm
        Graphics.ShaderRegistry.cppm
        Graphics.PipelineLibrary.cppm
        Graphics.RenderPipeline.cppm
        Graphics.GPUScene.cppm
        Graphics.FeatureCatalog.cppm
        Graphics.Systems.GPUSceneSync.cppm
        Graphics.Systems.MeshRendererLifecycle.cppm
        Graphics.Systems.PrimitiveBVHBuild.cppm
        Graphics.Systems.GraphLifecycle.cppm
        Graphics.Systems.PointCloudLifecycle.cppm
        Graphics.Systems.MeshViewLifecycle.cppm
        Graphics.Systems.PropertySetDirtySync.cppm
        # New Modules
        Graphics.RenderPath.cppm
        Graphics.GpuColor.cppm
        Graphics.DebugDraw.cppm
        Graphics.OctreeDebugDraw.cppm
        Graphics.BoundingDebugDraw.cppm
        Graphics.KDTreeDebugDraw.cppm
        Graphics.BVHDebugDraw.cppm
        Graphics.ConvexHullDebugDraw.cppm
        Graphics.TransformGizmo.cppm
        Graphics.Interaction.cppm
        Graphics.Presentation.cppm
        Graphics.GlobalResources.cppm
        Graphics.Colormap.cppm
        Graphics.VisualizationConfig.cppm
        Graphics.PropertyEnumerator.cppm
        Graphics.ColorMapper.cppm
        Graphics.VectorFieldManager.cppm
        Graphics.IsolineExtractor.cppm

        Pipelines/Graphics.Pipelines.cppm
        Passes/Graphics.Passes.Picking.cppm
        Passes/Graphics.Passes.Surface.cppm
        Passes/Graphics.Passes.SelectionOutlineSettings.cppm
        Passes/Graphics.Passes.SelectionOutline.cppm
        Passes/Graphics.Passes.HtexPatchPreview.cppm
        Passes/Graphics.Passes.Line.cppm
        Passes/Graphics.Passes.Point.cppm
        Passes/Graphics.Passes.DebugView.cppm
        Passes/Graphics.Passes.PostProcessSettings.cppm
        Passes/Graphics.Passes.PostProcess.cppm
        Passes/Graphics.Passes.Composition.cppm
        Passes/Graphics.Passes.ImGui.cppm
        Graphics.IORegistry.cppm
        Importers/Graphics.Importers.OBJ.cppm
        Importers/Graphics.Importers.PLY.cppm
        Importers/Graphics.Importers.XYZ.cppm
        Importers/Graphics.Importers.PCD.cppm
        Importers/Graphics.Importers.TGF.cppm
        Importers/Graphics.Importers.GLTF.cppm
        Importers/Graphics.Importers.STL.cppm
        Importers/Graphics.Importers.OFF.cppm
        Exporters/Graphics.Exporters.OBJ.cppm
        Exporters/Graphics.Exporters.PLY.cppm
        Exporters/Graphics.Exporters.STL.cppm
        PRIVATE
        Graphics.TinyGltf.cpp
        Graphics.ShaderCompiler.cpp
        Graphics.Camera.cpp
        Graphics.Geometry.cpp
        Graphics.Material.cpp
        Graphics.MaterialSystem.cpp
        Graphics.RenderSystem.cpp
        Graphics.RenderGraph.cpp
        Graphics.ModelLoader.cpp
        Graphics.TextureLoader.cpp
        Graphics.PipelineLibrary.cpp
        Graphics.GPUScene.cpp
        Graphics.DebugDraw.cpp
        Graphics.OctreeDebugDraw.cpp
        Graphics.BoundingDebugDraw.cpp
        Graphics.KDTreeDebugDraw.cpp
        Graphics.BVHDebugDraw.cpp
        Graphics.ConvexHullDebugDraw.cpp
        Graphics.TransformGizmo.cpp
        Graphics.Interaction.cpp
        Graphics.Presentation.cpp
        Graphics.GlobalResources.cpp
        Graphics.Colormap.cpp
        Graphics.PropertyEnumerator.cpp
        Graphics.ColorMapper.cpp
        Graphics.VectorFieldManager.cpp
        Graphics.IsolineExtractor.cpp
        Pipelines/Graphics.Pipelines.cpp
        Graphics.IORegistry.cpp
        Graphics.Systems.GPUSceneSync.cpp
        Graphics.Systems.MeshRendererLifecycle.cpp
        Graphics.Systems.PrimitiveBVHBuild.cpp
        Graphics.Systems.GraphLifecycle.cpp
        Graphics.Systems.PointCloudLifecycle.cpp
        Graphics.Systems.MeshViewLifecycle.cpp
        Graphics.Systems.PropertySetDirtySync.cpp
        Passes/Graphics.Passes.Picking.cpp
        Passes/Graphics.Passes.Surface.cpp
        Passes/Graphics.Passes.SelectionOutline.cpp
        Passes/Graphics.Passes.HtexPatchPreview.cpp
        Passes/Graphics.Passes.Line.cpp
        Passes/Graphics.Passes.Point.cpp
        Passes/Graphics.Passes.DebugView.cpp
        Passes/Graphics.Passes.PostProcess.cpp
        Passes/Graphics.Passes.Composition.cpp
        Importers/Graphics.Importers.OBJ.cpp
        Importers/Graphics.Importers.PLY.cpp
        Importers/Graphics.Importers.XYZ.cpp
        Importers/Graphics.Importers.PCD.cpp
        Importers/Graphics.Importers.TGF.cpp
        Importers/Graphics.Importers.GLTF.cpp
        Importers/Graphics.Importers.STL.cpp
        Importers/Graphics.Importers.OFF.cpp
        Exporters/Graphics.Exporters.OBJ.cpp
        Exporters/Graphics.Exporters.PLY.cpp
        Exporters/Graphics.Exporters.STL.cpp
)

target_include_directories(${target_name} PUBLIC .)

target_include_directories(${target_name} SYSTEM PUBLIC
        ${tinygltf_SOURCE_DIR}
)

target_link_libraries(${target_name}
        PUBLIC
        IntrinsicCore
        IntrinsicGeometry
        IntrinsicRHI
        IntrinsicECS
        IntrinsicInterface
        imguizmo_lib
)
